--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": "~7.0.12",
+    "php": "~5.6.5|7.0.2|7.0.4|~7.0.6",
     "magento/module-backend": "100.1.*",
     "magento/framework": "100.1.*"
   },
