--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
   - 7.0
 
 install:
-  - echo "{\"http-basic\":{\"repo.magento.com\":{\"username\":\"${MAGENTO_USERNAME}\",\"password\":\"${MAGENTO_PASSWORD}\"}}}" > auth.json
+  - echo '{"http-basic":{"repo.magento.com":{"username":"${MAGENTO_USERNAME}","password":"${MAGENTO_PASSWORD}"}}}' > auth.json
   - composer install --prefer-dist
 
 script:
