--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   "minimum-stability": "dev",
   "require": {
     "php": "~5.6.5|7.0.2|7.0.4|~7.0.6",
-    "magento/community-edition": "~2.1"
+    "magento/module-backend": "100.0.*",
+    "magento/framework": "100.0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "4.1.0",
