--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
   "minimum-stability": "dev",
   "require": {
     "php": "~5.6.5|7.0.2|7.0.4|~7.0.6",
-    "magento/module-backend": "100.0.*",
-    "magento/framework": "100.0.*"
+    "magento/module-backend": "100.1.*",
+    "magento/framework": "100.1.*",
+    "magento/zendframework1": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "4.1.0",
