--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   "minimum-stability": "dev",
   "require": {
     "php": "~5.6.5|7.0.2|7.0.4|~7.0.6",
-    "magento/zendframework1": "dev-master"
+    "magento/zendframework1": "dev-master",
+    "magento/framework": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "4.1.0",
