--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "require": {
     "php": "~5.6.5|7.0.2|7.0.4|~7.0.6",
     "magento/zendframework1": "dev-master",
-    "magento/framework": "dev-master"
+    "magento/framework": "100.1.*"
   },
   "require-dev": {
     "phpunit/phpunit": "4.1.0",
