--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,11 @@
   "minimum-stability": "dev",
   "require": {
     "php": "~5.6.5|7.0.2|7.0.4|~7.0.6",
-    "magento/community-edition": "2.1.*"
+    "zendframework/zend-http": "^2.6",
+    "magento/framework": "100.1.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.1.0",
-    "squizlabs/php_codesniffer": "1.5.3",
-    "phpmd/phpmd": "@stable",
-    "pdepend/pdepend": "2.2.2",
-    "fabpot/php-cs-fixer": "~1.2",
-    "lusitanian/oauth": "~0.3 <=0.7.0",
-    "sebastian/phpcpd": "2.0.0"
+    "phpunit/phpunit": "4.1.0"
   },
   "type": "magento2-module",
   "version": "1.0.0",
