try installing package

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ script:
  - wget https://github.com/magento/magento2/archive/2.1.4.zip
  - unzip -qq 2.1.4.zip
  - cd magento2-2.1.4/
+ - composer require --prefer-source --no-interaction monashee/smtp:dev-master
+ - ./vendor/bin/php -c app/code/Monashee/Smtp/phpunit.xml.dist
 
