--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     }
   ],
   "require": {
-    "php": "~5.6.5|7.0.2|7.0.4|~7.0.6",
-    "magento/framework": "100.1.*"
+    "php": "~5.6.5|7.0.2|7.0.4|~7.0.6"
   },
   "require-dev": {
     "phpunit/phpunit": "4.1.0"
