--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,6 +9,8 @@
 -->
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
+         debug="true"
+         verbose="true"
          colors="true"
          bootstrap="./Test/Unit/bootstrap.php"
 >
