--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,6 +11,7 @@
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
          debug="true"
          verbose="true"
+         testdox="true"
          colors="true"
          bootstrap="./Test/Unit/bootstrap.php"
 >
