--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ script:
  - wget https://github.com/magento/magento2/archive/2.1.4.zip
  - unzip -qq 2.1.4.zip
  - cd magento2-2.1.4/
- - composer require --no-interaction "monashee/smtp":"dev-master"
- - ./vendor/bin/phpunit -c vendor/monashee/smtp/phpunit.xml.dist
+ - composer require --no-interaction "monashee/module-smtp":"dev-master"
+ - ./vendor/bin/phpunit -c vendor/monashee/module-smtp/phpunit.xml.dist
